<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ExtraTranslation">GogoTalk少儿英语</string>
    <string name="login_title">GoGoTalk少儿英语</string>
    <string name="login_input_phone_label">手机号</string>
    <string name="login_input_phone_hint">请输入手机号</string>
    <string name="login_input_password_label">密&#160;&#160;&#160;&#160;码</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_btn_submit">登录</string>
    <string name="login_toast_empty_msg">请填写手机号或密码</string>
    <string name="login_toast_phone_error_msg">手机号输入有误</string>
    <string name="login_reg_tv">新用户注册</string>

    <string name="reg_code_label">验证码</string>
    <string name="reg_input_code_hint">请输入验证码</string>
    <string name="reg_input_password_hint">登录密码(6-16位数字字母组合)</string>

    <string name="reg_phone_error_empty_toast_txt">请填写手机号码！</string>
    <string name="reg_code_error_empty_toast_txt">请填写验证码！</string>
    <string name="reg_code_error_format_toast_txt">验证码格式不正确！</string>
    <string name="reg_password_error_empty_toast_txt">请填写密码！</string>
    <string name="reg_password2_error_empty_toast_txt">请输入确认密码！</string>
    <string name="reg_password_same_error_empty_toast_txt">密码不一致,请检查！</string>
    <string name="reg_password_error_format_toast_txt">密码格式不正确！</string>

    <string name="main_class_list_item_empty_msg">小朋友你还没约课呦， 赶快让你的爸爸妈妈帮你约课吧！</string>
    <string name="main_popu_setting_check_device_msg">检测设备</string>
    <string name="main_popu_setting_clear_cache">清除缓存</string>
    <string name="main_popu_setting_about_us">关于我们</string>
    <string name="main_popu_setting_out_login">退出登录</string>
    <string name="dialog_about_us_version_label">版本号：</string>
    <string name="dialog_check_device_camera_label">摄像头检测</string>
    <string name="dialog_check_device_speaker_label">扬声器检测</string>
    <string name="dialog_check_device_microphone_label">麦克风检测</string>
    <string name="dialog_check_device_btn_error">重新检查</string>
    <string name="dialog_check_device_btn_first">看不到</string>
    <string name="dialog_check_device_btn_two">可以看到</string>

    <string name="record_empty_msg">小朋友你还没有上过我们的课程,\n赶快去上课赢取更多奖杯哦~</string>
    <string name="record_order_class">去约课</string>
    <string name="record_after_class">课后练习</string>

    <string name="teacher">teacher</string>
    <string name="cancel_class">取消约课</string>
    <string name="ask_cancel_class">是否取消约课？</string>
    <string name="close_video">您已经关闭自己的视频，其他小朋友将不能看到你了哦！</string>
    <string name="open_video">您已经打开自己的视频，其他小朋友将能看到你了哦！</string>
    <string name="birth_date">出生日期</string>
    <string name="default_name">Bella</string>

    <string name="courseware_load_txt1">课件加载中......  请耐心等待！</string>
    <string name="courseware_load_txt2">为保证正常加载，请您不要退出或处于后台运行。</string>
    <string name="courseware_load_txt">已加载:</string>
    <string name="connect_load_txt">服务器连接中...</string>
    <string name="poivacy_statement">隐私声明</string>
    <string name="reg_login_txt">已有账号,去登录</string>

</resources>
