<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/bg_app"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/btn_back"
        />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/color_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20dp"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:layout_marginTop="23dp"
        android:id="@+id/iv_phone_bg"
        android:layout_width="337dp"
        android:background="@mipmap/bg_login_input_boder"
        android:layout_height="41dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageView
        android:id="@+id/iv_ic_phone"
        app:layout_constraintBottom_toBottomOf="@+id/iv_phone_bg"
        app:layout_constraintLeft_toLeftOf="@+id/iv_phone_bg"
        android:layout_marginLeft="18dp"
        app:layout_constraintTop_toTopOf="@+id/iv_phone_bg"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:src="@mipmap/ic_login_input_phone"/>
    <TextView
        android:id="@+id/tv_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_input_phone_label"
        app:layout_constraintBottom_toBottomOf="@+id/iv_phone_bg"
        app:layout_constraintLeft_toRightOf="@+id/iv_ic_phone"
        app:layout_constraintTop_toTopOf="@+id/iv_phone_bg"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:layout_marginLeft="8dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:textCursorDrawable="@null"
        android:background="@null"
        android:layout_width="0dp"
        android:text=""
        android:inputType="phone"
        android:hint="@string/login_input_phone_hint"
        android:id="@+id/et_reg_phone"
        android:textColorHint="#ffb7a6ed"
        android:maxLength="11"
        android:textColor="#ffffffff"
        android:layout_marginLeft="11dp"
        android:textSize="14sp"
        android:layout_marginRight="8dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_phone_bg"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_label"
        app:layout_constraintTop_toTopOf="@+id/iv_phone_bg"
        app:layout_constraintBottom_toBottomOf="@+id/iv_phone_bg" />
    <ImageView
        android:layout_marginTop="14dp"
        android:id="@+id/iv_code_bg"
        android:layout_width="337dp"
        android:background="@mipmap/bg_login_input_boder"
        android:layout_height="41dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_phone_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageView
        android:id="@+id/iv_ic_code"
        app:layout_constraintBottom_toBottomOf="@+id/iv_code_bg"
        app:layout_constraintLeft_toLeftOf="@+id/iv_code_bg"
        android:layout_marginLeft="18dp"
        app:layout_constraintTop_toTopOf="@+id/iv_code_bg"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:src="@mipmap/ic_reg_code"/>
    <TextView
        android:id="@+id/tv_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_code_label"
        app:layout_constraintBottom_toBottomOf="@+id/iv_code_bg"
        app:layout_constraintLeft_toRightOf="@+id/iv_ic_code"
        app:layout_constraintTop_toTopOf="@+id/iv_code_bg"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:layout_marginLeft="8dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:textCursorDrawable="@null"
        android:background="@null"
        android:layout_width="0dp"
        android:text=""
        android:inputType="number"
        android:hint="@string/reg_input_code_hint"
        android:id="@+id/et_reg_code"
        android:textColorHint="#ffb7a6ed"
        android:maxLength="4"
        android:textColor="#ffffffff"
        android:layout_marginLeft="11dp"
        android:textSize="14sp"
        android:layout_marginRight="5dp"
        android:layout_height="35dp"
        app:layout_constraintRight_toLeftOf="@+id/btn_code"
        app:layout_constraintLeft_toRightOf="@+id/tv_code_label"
        app:layout_constraintTop_toTopOf="@+id/iv_code_bg"
        app:layout_constraintBottom_toBottomOf="@+id/iv_code_bg" />
    <Button
        android:id="@+id/btn_code"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:background="@mipmap/bg_reg_code_normal"
        android:text="获取验证码"
        android:layout_marginRight="6dp"
        android:textColor="#FF5F7A"
        app:layout_constraintBottom_toBottomOf="@+id/iv_code_bg"
        app:layout_constraintTop_toTopOf="@+id/iv_code_bg"
        app:layout_constraintRight_toRightOf="@+id/iv_code_bg"
        />
    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/iv_password_bg"
        android:layout_width="337dp"
        android:background="@mipmap/bg_login_input_boder"
        android:layout_height="41dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_code_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageView
        android:id="@+id/iv_ic_password"
        app:layout_constraintBottom_toBottomOf="@+id/iv_password_bg"
        app:layout_constraintLeft_toLeftOf="@+id/iv_password_bg"
        android:layout_marginLeft="18dp"
        app:layout_constraintTop_toTopOf="@+id/iv_password_bg"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:src="@mipmap/ic_login_input_password"/>
    <TextView
        android:id="@+id/tv_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_input_password_label"
        app:layout_constraintBottom_toBottomOf="@+id/iv_password_bg"
        app:layout_constraintLeft_toRightOf="@+id/iv_ic_password"
        app:layout_constraintTop_toTopOf="@+id/iv_password_bg"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:layout_marginLeft="8dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:textCursorDrawable="@null"
        android:background="@null"
        android:layout_width="0dp"
        android:text=""
        android:inputType="textPassword"
        android:hint="@string/reg_input_password_hint"
        android:id="@+id/et_reg_password"
        android:textColorHint="#ffb7a6ed"
        android:textColor="#ffffffff"
        android:layout_marginLeft="11dp"
        android:textSize="14sp"
        android:layout_marginRight="8dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_password_bg"
        app:layout_constraintStart_toEndOf="@+id/tv_password_label"
        app:layout_constraintTop_toTopOf="@+id/iv_password_bg"
        app:layout_constraintBottom_toBottomOf="@+id/iv_password_bg" />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/iv_password_bg"
        android:id="@+id/btn_reg_submit"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@mipmap/bg_reg_btn"/>
    <TextView
        android:id="@+id/tv_reg_login"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/reg_login_txt"/>
</androidx.constraintlayout.widget.ConstraintLayout>